--- a/ops/styles/index.less
+++ b/ops/styles/index.less
@@ -12,8 +12,15 @@
  * Compilable libraries
  */
 
+/* Superfish - http://users.tpg.com.au/j_birch/plugins/superfish/ */
+@import url("lib/pkp/styles/lib/superfish/superfish.css");
+
 /* Pines Notify - http://pines.sourceforge.net/pnotify/ */
 @import url("lib/pkp/styles/lib/jquery.pnotify.default.css");
+
+/* Tag it! - http://plugins.jquery.com/project/tag-it/ */
+@import url("lib/pkp/styles/lib/tagit.css");
+
 
 /**
  * Resets to override unwanted styles in external libs
