--- a/ojs/styles/articleView.css
+++ b/ojs/styles/articleView.css
@@ -99,14 +99,14 @@ div.rtSeparator {
 	width: 100%;
 	padding: 0;
 	border-bottom: 2px dotted #000;
-	line-height: 0px;
+	line-height: 0;
 }
 
 div.rtSeparatorThin {
 	width: 100%;
-	padding: 5px 0px 5px 0px;
+	padding: 5px 0 5px 0;
 	border-bottom: 1px dotted #000;
-	line-height: 0px;
+	line-height: 0;
 }
 
 div.rtBlock {
@@ -171,7 +171,7 @@ dd {
 }
 
 #sidebarRTRelatedItems ul {
-	padding: 0px;
+	padding: 0;
 }
 
 #sidebarRTRelatedItems li {
