--- a/ops/styles/articleView.css
+++ b/ops/styles/articleView.css
@@ -29,15 +29,15 @@
 }
 
 #main h5 {
-	margin: 0em 1em 0.5em 0em;
-	padding-top: 0em;
+	margin: 0 1em 0.5em 0;
+	padding-top: 0;
 	font-size: 1.3em;
 	font-family: Georgia,'Times New Roman',Times,serif;
 	font-weight: normal;
 }
 
 #main h6 {
-	margin: 0.5em 1em 0.5em 0em;
+	margin: 0.5em 1em 0.5em 0;
 	padding: 0;
 	font-family: Georgia,'Times New Roman',Times,serif;
 	font-weight: normal;
