--- a/ops/styles/leftSidebar.css
+++ b/ops/styles/leftSidebar.css
@@ -24,7 +24,7 @@
 #leftSidebar {
 	float: left;
 	width: 14%;
-	padding: 1em 0em 1em 0em;
+	padding: 1em 0;
 	font-size: 0.65em;
 	height: 100%;
 	margin-left: 10%;
