--- a/ops/styles/pdfView.css
+++ b/ops/styles/pdfView.css
@@ -10,7 +10,7 @@
 #inlinePdfResizer {
 	width: 98%;
 	height: 400px;
-	padding: 1px 0px 1px 1px;
+	padding: 1px 0 1px 1px;
 }
 
 #pluginMissing{
@@ -24,7 +24,7 @@
 #inlinePdf {
 	width:99%;
 	height:99%;
-	padding: 1px 0px 1px 1px;
+	padding: 1px 0 1px 1px;
 }
 
 #inlinePdf.fullscreen {
@@ -51,8 +51,8 @@ a.pdf {
 .black_overlay{
 	display: none;
 	position: absolute;
-	top: 0%;
-	left: 0%;
+	top: 0;
+	left: 0;
 	width: 100%;
 	height: 2000px; /* 100% only fills window, not page, causing potential display issues */
 	background-color: black;
