--- a/ops/styles/rightSidebar.css
+++ b/ops/styles/rightSidebar.css
@@ -25,7 +25,7 @@
 #rightSidebar {
 	float: right;
 	width: 14%;
-	padding: 1em 0em 1em 0em;
+	padding: 1em 0;
 	font-size: 0.65em;
 	height: 100%;
 	margin-right: 10%;
