*8212* submission progress and workflow CSS to pkp-lib

--- a/pkp-lib/styles/index.less
+++ b/pkp-lib/styles/index.less
@@ -27,6 +27,9 @@
 
 @import url("lib/pkp/styles/sprites.less");
 
+/* Page Elements */
+@import url("lib/pkp/styles/pages/index.less");
+
 .loading_container {
 	text-align: center;
 	padding-top: 10px;
